[project]
name = "pygame-wrapper"
version = "0.1.0"
description = "A simple wrapper for Pygame to make game development easier."
readme = "README.md"
requires-python = ">=3.10.11"
dependencies = [
    "pygame-ce>=2.5.5",
    "pygame>=2.6.1",
    "pymunk>=7.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.12",
]
